[package]
name = "xcli"
version = "0.1.0"
edition = "2021"
authors = ["xgh<41764978@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4",features = ["derive"]}
anyhow = "1.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
