[package]
name = "xcli"
version = "0.1.0"
edition = "2021"
authors = ["xgh<41764978@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4",features = ["derive"]}
anyhow = "1.0"
serde = {version = "1.0",features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.34"
axum = {version = "0.7.5",features = ["http2","query","tracing"]}
base64 = "0.22.0"
blake3 = "1.5.1"
csv = "1.3.0"
ed25519-dalek = {version = "2.1.1",features = ["rand_core"]}
enum_dispatch = "0.3.13"
rand = "0.8.5"
tokio = {version = "1.36.0",features = ["rt","rt-multi-thread", "macros", "net", "fs"]}
tower-http = {version = "0.5.2",features = ["compression-full","cors","trace","fs"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zxcvbn = "2.2.2"
